# DocGuard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
architecture/: README.md  architecture-final.mermaid
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/: config.py  main.py
backend/src/adapters/: github.py  llm_client.py
backend/src/api/: deps.py
backend/src/api/middleware/: auth.py
backend/src/api/routers/: findings.py  repos.py  runs.py  webhooks.py
backend/src/db/: engine.py  orm.py
backend/src/domain/: exceptions.py  models.py  ports.py
backend/src/repositories/: finding_repository.py  repo_repository.py  run_repository.py
backend/src/services/: audit_background_runner.py  audit_dispatcher.py  audit_orchestrator.py  comment_formatter.py
backend/src/services/indexing/: ast_indexer.py  convention_extractor.py  diff_analyzer.py  linker.py  md_indexer.py
backend/src/services/judgment/: drift_judge.py  fix_drafter.py  style_judge.py
backend/tests/unit/: test_ast_indexer.py  test_audit_orchestrator.py  test_comment_formatter.py  test_convention_extractor.py  test_diff_analyzer.py  test_linker.py  test_llm_client.py  test_md_indexer.py
backend/tests/unit/judgment/: test_drift_judge.py  test_fix_drafter.py  test_style_judge.py
doc/: CONTEXT_HANDOFF.md  IMPLEMENTATION_GUIDE.md  PRODUCT_DOCUMENT.md
frontend/: .env.local.example  middleware.ts  package-lock.json  package.json
infra/: README.md  apigateway.tf  (+6 more)
(+33 files in other folders)
